# mediaserver-client

./: .flake8  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  config.json.example  mediaserver_api_client.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-ci.yml
examples/: backup_channel_recursive.py  backup_media.py  backup_media_from_channel.py  change_channel_sorting.py  cleanup_unwatched_media.py  csv_media_generate.py  csv_media_stats.py  delete_duplicates.py  delete_empty_channel.py  delete_empty_channels.py  delete_video_qualities.py  download_all_original_files.py  dump_json_for_migration.py  dump_oids.py  dump_oids_legacy.py  dump_users_with_personal_media.py  duplicate_cleaning.py  export_annotations.py  extract_layer.py  fix_invalid_speakers.py  generate_csv_all_videos.py  get_channel_size.py  get_files_to_backup.py  json_channels_media_generate.py  list_media_for_speaker.py  mass_delete.py  mass_delete_old_media_html_template.html  mass_delete_old_media_plain_template.txt  mass_delete_old_medias.py  mass_move.py  mass_public_access.py  mass_restore.py  mass_update_categories.py  mass_upload.py  mass_user_edit.py  monitor_response_time.py  ping_server.py  regen_redirection_table.py  report_video_resolutions.py  restore_media.py  (+8 more)
ms_client/: __init__.py  client.py  conf.json  conf.py  configuration.py  content.py  main.py  upload.py  users_csv.py
ms_client/lib/: configuration.py  content.py  download.py  upload.py  users_csv.py  utils.py
tests/: conftest.py  test_client.py  test_utils.py
tests/examples/: test_all_scripts_help.py  test_cleanup_unwatched_media.py  test_delete_empty_channel.py  test_delete_empty_channels.py  test_fix_invalid_speakers.py  test_mass_delete_old_medias.py
