[tool.poetry]
name = "mediaserver-api-client"
version = "0.1.0"
description = "A python3 reference implementation of an UbiCast MediaServer API client"
readme = "README.md"
homepage = "https://www.ubicast.eu/en/solutions/delivery/"
repository = "https://github.com/UbiCastTeam/mediaserver-client"
authors = [
    "UbiCast <dev@ubicast.eu>",
    "Florent Thiery <florent.thiery@ubicast.eu>",
    "Stephane Diemer <stephane.diemer@ubicast.eu>",
    "Stephane Schoorens <stephane.schoorens@ubicast.eu>",
]
license = "GPL-3.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "ubicast", 
    "mediaserver",
    "api",
    "client",
]
packages = [
    { include = "mediaserver_api_client.py" },
]

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
black = { version = "*", allows-prereleases = true, python = "^3.6" }
ipython = "^7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
