[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "mediaserver-api-client"
description = "A python3 reference implementation of an UbiCast MediaServer (Nudgis) API client."
version = "6.1"
authors = [{name = "UbiCast"}]
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.11"
dependencies = [
  "requests >= 2.30",
  "unidecode",
]

[project.optional-dependencies]
dev = [
  "flake8",
  "mypy",
  "pytest",
  "pytest-cov",
  "types-requests",
  "vulture",
]

[project.urls]
Repository = "https://github.com/UbiCastTeam/mediaserver-client"

[tool.setuptools]
packages = ["ms_client", "ms_client.lib"]
include-package-data = false

[tool.pytest.ini_options]
addopts = "--verbose --tb=native --color=yes"
log_date_format = "%H:%M:%S"
log_format = "%(asctime)s.%(msecs)03d %(name)s %(levelname)s %(message)s"
log_level = "DEBUG"
testpaths = "tests/"

[tool.coverage.run]
source_dirs = ["ms_client", "examples"]
