[metadata]
name = mediaserver-api-client
version = attr: ms_client.__version__
description = A python3 reference implementation of an UbiCast MediaServer API client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.ubicast.eu/en/solutions/delivery/
download_url = https://github.com/UbiCastTeam/mediaserver-client
author = UbiCast
author_email = dev@ubicast.eu
keywords =
    api
    client
    mediaserver
    ubicast
license = LGPLv3
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Multimedia :: Video
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    requests ~= 2.21
packages =
    ms_client
    ms_client.lib
setup_requires=
    setuptools
    wheel

[options.package_data]
ms_client =
    conf.json

[options.extras_require]
dev =
    black
    flake8
    twine

[bdist_wheel]
universal = 1
